--- a/src/portafolioApp.css
+++ b/src/portafolioApp.css
@@ -70,6 +70,18 @@
   box-sizing: border-box;
 }
 
+#dark {
+  background-color: #202324;
+  color: #aba499;
+  --darkreader-bg--title-color: #262a2b;
+  --darkreader-text--title-color: #c8c3bc;
+  --darkreader-bg--title-color-dark: #000000;
+  --darkreader-bg--text-color: #585f63;
+  --darkreader-text--text-color: #9e9689;
+  --darkreader-bg--body-color: #1b1d1e;
+  --darkreader-text--container-color: #e8e6e3;
+}
+
 html {
   scroll-behavior: smooth;
 }
@@ -143,7 +155,7 @@ img {
 
 .grid {
   display: grid;
-  gap: 1.5rem;
+  grid-gap: 1.5rem;
 }
 
 /*=============== BUTTONS ===============*/
@@ -169,17 +181,7 @@ img {
   align-items: center;
 }
 
-#dark {
-    background-color: #202324;
-    color: #aba499;
-    --darkreader-bg--title-color: #262a2b;
-    --darkreader-text--title-color: #c8c3bc;
-    --darkreader-bg--title-color-dark: #000000;
-    --darkreader-bg--text-color: #585f63;
-    --darkreader-text--text-color: #9e9689;
-    --darkreader-bg--body-color: #1b1d1e;
-    --darkreader-text--container-color: #e8e6e3;
-}
+
 
 /*=============== BREAKPOINTS ===============*/
 /* For large devices */
