--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -17,7 +17,7 @@
 }
 .about__title {
     font-weight: var(--font-semi-bold);
-    margin-bottom: 1rem;
+    /* margin-bottom: 1rem; */
 }
 .about__description {
     margin: 0 0 1rem 1rem;
@@ -27,7 +27,6 @@
     animation: gorroAnimated 2s infinite alternate;
     transform-box: fill-box;
 }
-
 @keyframes gorroAnimated{
     0% {
         transform: scale(1.1);
@@ -39,6 +38,7 @@
 
 .about__interests {
     height: 100px;
+    /* padding-top: 120px; */
     text-align: center;
     display: flex;
     justify-content: space-around;
@@ -46,7 +46,7 @@
     grid-column-start: 1;
     grid-column-end: 3;
 }
-.interests__cards {
+.interests__container {
     display: inherit;
     justify-content: space-around;
 }
@@ -55,10 +55,33 @@
     padding: 10px;
     font-size: var(--big-font-size);
 }
-/* .interest__icon:hover {
-    background-color: #6c63ff;
-    color: white;
-} */
+.interest__item{
+    position: relative;
+    overflow: hidden;
+}
+.interest__hover{
+    /* Que se posicione en su padre */
+    position: absolute;
+    background: #6c63ff;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    font-size: 70%;
+    border-radius: 10px;
+    color: #fff;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    /* Para que no se vean directamente */
+    transform: translateX(100%);
+    cursor: pointer;
+    transition: transform .3s ease-in-out;
+}
+.interest__item:hover .interest__hover{
+    transform: translateX(0%);
+}
 
 @media screen and (max-width: 768px) {
 
@@ -85,32 +108,9 @@
         grid-column-end: 3;
     }
 
+    .interest__title {
+        font-size: var(--smaller-font-size);
+    }
+
 }
 
-.projects__hover{
-    /* Que se posicione en su padre */
-    position: absolute;
-    background: #6c63ff;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    font-size: 70%;
-    border-radius: 10px;
-    color: #fff;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    /* Para que no se vean directamente */
-    transform: translateX(100%);
-    cursor: pointer;
-    transition: transform .3s ease-in-out;
-}
-.projects__item:hover .projects__hover{
-    transform: translateX(0%);
-}
-.projects__item{
-    position: relative;
-    overflow: hidden;
-}
