Skills con animaciones y su respectivo espacio en las casillas de formacion

--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -111,6 +111,10 @@
     .interest__title {
         font-size: var(--smaller-font-size);
     }
+    
+    .interest__icon {
+        margin: 0;
+    }
 
 }
 
