--- a/src/portafolioApp.css
+++ b/src/portafolioApp.css
@@ -9,7 +9,7 @@
   /*Color mode HSL(hue, saturation, lightness)*/
   --hue: 0;
   --sat: 0%;
-  /* --title-color: hsl(var(--hue), var(--sat), 20%); */
+  --title-color: hsl(var(--hue), var(--sat), 20%);
   --title-color-dark: hsl(var(--hue), var(--sat), 0%);
   --text-color: hsl(var(--hue), var(--sat), 46%);
   --body-color: hsl(var(--hue), var(--sat), 98%);
@@ -102,7 +102,7 @@ body {
 h1,
 h2,
 h3 {
-  color: var(--title-color);
+  /* color: var(--title-color); */
   font-weight: var(--font-semi-bold);
 }
 
@@ -132,7 +132,7 @@ img {
 
 .section__title {
   font-size: var(--h1-font-size);
-  color: var(--title-color);
+  /* color: var(--title-color); */
 }
 
 .section__subtitle {
