--- a/src/components/skills/skill.css
+++ b/src/components/skills/skill.css
@@ -34,6 +34,7 @@
     margin: .3rem;
     background-color: #585f631e;
     border-radius: .5rem;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 .skill__card--icon {
     font-size: var(--big-font-size);
@@ -59,6 +60,7 @@
     transition-duration: .3s;
     transition-timing-function: ease-out;
     background-color: #585f631e;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 .skill__info--card:hover {
     border: solid 1px;
