--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -1,15 +1,16 @@
 
-.projects__container {
+/* .projects__container {
 
 }
 .projects__content {
 
-}
+} */
 
 .projects__links {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
 }
 .project__link {
     text-decoration: none;
@@ -36,6 +37,27 @@
     border-radius: 20px;
     background-color: #585f631e;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    position: relative;
+    overflow: hidden;
+}
+.information__hover {
+    position: absolute;
+    padding: 1.8rem;
+    bottom: 0;
+    left: 0;
+    width: 80%;
+    color: white;
+    font-weight: var(--font-semi-bold);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    /* Para que no se vean directamente */
+    transform: translateX(-100%);
+    cursor: pointer;
+    transition: transform .3s ease-in-out;
+}
+.project__card--box:hover .information__hover{
+    transform: translateX(0%);
 }
 .card__image {
     display: inline-block;
@@ -56,6 +78,13 @@
 
 @media screen and (max-width: 768px) {
 
+    .projects__cards {
+        grid-template-columns: auto;
+    }
+    .project__card--box {
+        width: 80%;
+    }
+
 }
 
 @media screen and (max-width: 576px) {
@@ -63,5 +92,25 @@
     .projects__cards {
         grid-template-columns: auto;
     }
+    .information__hover {
+        transform: translate(0%);
+        padding: 1rem;
+        width: 100%;
+    }
 
 }
+
+@media screen and (max-width: 350px) {
+
+    .project__card--buttons {
+        flex-wrap: wrap;
+    }
+    .project__link {
+        font-size: var(--normal-font-size);
+    }
+    .project__card--box {
+        width: auto;
+    }
+
+}
+  
