Contact  - Se agregaron estilos v.1

--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -106,6 +106,7 @@
     }
     .interest__hover {
         transform: translateY(70%);
+        color: unset;
         background: none;
     }
     .interest__item:hover .interest__hover{
