--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -1,14 +1,36 @@
 
 .contact__content {
-    grid-template-columns: 60% 40%;
+    grid-template-columns: repeat(2, 1fr);
 }
-.contact__inputs {
+.contact__form-box {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    justify-content: space-around;
+}
+.contact__form {
+    margin-bottom: var(--mb-2);
+}
+.contact__form-input {
+    width: 100%;
+    border: 2px solid rgba(0, 0, 0, 0.3);
+    background: none;
+    color: var(--text-color);
+    outline: none;
+    border-radius: 0.75rem;
+    padding: 1.5rem;
+    margin-bottom: 0.5rem;
+    z-index: 1;
 }
 
+.contact__card {
+    display: flex;
+    align-items: center;  
+    justify-content: center; 
+}
+.image {
+    width: 400px;
+    height: 400px;
+}
 #card {
     animation: hideCard 3s infinite alternate;
     transform-box: fill-box;
@@ -20,3 +42,91 @@
         /* transform-origin: bottom; */
     }
 }
+
+.contact__social {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    justify-content: space-around;
+    grid-column-start: 1;
+    grid-column-end: 3;
+    margin-top: 2.5rem;
+    flex-wrap: wrap;
+}
+.contact__social-box {
+    display: inherit;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 250px;
+    height: 250px;
+    background-color: #585f631e;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 2rem;
+    padding: 2rem;
+}
+.social__icon {
+    margin: 1rem;
+    width: 100px;
+    height: 100px;
+}
+.social__icon--arrow {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: var(--text-color);
+}
+.social__icon--arrow i {
+    width: 22px;
+    height: 22px;
+    font-size: 22px;
+}
+
+@media screen and (max-width: 768px) {
+
+    .contact__card {
+        grid-column-start: 1;
+        grid-column-end: 3;
+    }
+    .contact__content {
+        grid-template-columns: 1fr;
+    }
+    .contact__form-box {
+        align-items: stretch;
+        grid-column-start: 1;
+        grid-column-end: 3;
+        grid-row-start: 2;
+        grid-row-end: 3;
+        align-items: stretch;
+    }
+    .image {
+        width: 300px;
+        height: 300px;
+    }
+    .contact__social-box {
+        width: 230px;
+        height: 230px;
+        margin-bottom: 1.5rem;
+    }
+    
+}
+  
+@media screen and (max-width: 576px) {
+    .image {
+        width: 200px;
+        height: 200px;
+    }
+    .contact__social-box {
+        width: 200px;
+        height: 200px;
+        font-size: var(--small-font-size);
+        margin-bottom: 1.5rem;
+    }
+}
+
+@media screen and (max-width: 350px) {
+    .button .button-contact {
+        margin: 0px;
+    }
+}
+  
