--- a/src/portafolioApp.css
+++ b/src/portafolioApp.css
@@ -80,7 +80,7 @@
   --darkreader-bg--title-color-dark: #000000;
   --darkreader-bg--text-color: #585f63;
   --darkreader-text--text-color: #9e9689;
-  --darkreader-bg--body-color: #1b1d1e;
+  --body-color: #202324;
   --darkreader-text--container-color: #e8e6e3;
 }
 
