--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -31,6 +31,7 @@
 }
 .project__card--box {
     width: 100%;
+    height: 324px;
     display: inherit;
     justify-content: center;
     align-items: center;
