--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -31,7 +31,6 @@
 }
 .project__card--box {
     width: 100%;
-    height: 324px;
     display: inherit;
     justify-content: center;
     align-items: center;
@@ -104,7 +103,7 @@
     }
     .information__hover {
         transform: translate(0%);
-        padding: 1rem;
+        padding: 1rem 1.2rem;
         width: 100%;
     }
     .button {
