--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -1,4 +1,3 @@
-
 /* .projects__container {
 
 }
@@ -7,129 +6,122 @@
 } */
 
 .projects__links {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
 }
 .project__link {
-    text-decoration: none;
-    cursor: pointer;
-    padding: 15px 22px;
-    margin: 10px;
-    font-size: 1.2rem;
+  text-decoration: none;
+  cursor: pointer;
+  padding: 15px 22px;
+  margin: 10px;
+  font-size: 1.2rem;
 }
 
 .projects__cards {
-    grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(2, 1fr);
 }
 .project__card {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 .project__card--box {
-    width: 100%;
-    display: inherit;
-    justify-content: center;
-    align-items: center;
-    border-radius: 20px;
-    background-color: #585f631e;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    position: relative;
-    overflow: hidden;
+  width: 100%;
+  display: inherit;
+  justify-content: center;
+  align-items: center;
+  border-radius: 20px;
+  background-color: #585f631e;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  position: relative;
+  overflow: hidden;
 }
 .information__hover {
-    position: absolute;
-    padding: 1.8rem;
-    bottom: 0;
-    left: 0;
-    width: 80%;
-    color: white;
-    font-weight: var(--font-semi-bold);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    /* Para que no se vean directamente */
-    transform: translateX(-100%);
-    cursor: pointer;
-    transition: transform .3s ease-in-out;
+  position: absolute;
+  padding: 1.8rem;
+  bottom: 0;
+  left: 0;
+  width: 80%;
+  color: var(--title-color);
+  font-weight: var(--font-semi-bold);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  /* Para que no se vean directamente */
+  transform: translateX(-100%);
+  cursor: pointer;
+  transition: transform 0.3s ease-in-out;
 }
-.project__card--box:hover .information__hover{
-    transform: translateX(0%);
+.project__card--box:hover .information__hover {
+  transform: translateX(0%);
 }
-.project__card--box:hover .card__image{
-    opacity: 0.5;
+.project__card--box:hover .card__image {
+  opacity: 0.5;
 }
 .project__card--box:hover .card__image--ligth {
-    opacity: 1;
+  opacity: 1;
 }
 .card__image {
-    display: inline-block;
-    width: 90%;
-    height: 90%;
-    border-radius: 20px;
+  display: inline-block;
+  width: 90%;
+  height: 90%;
+  border-radius: 20px;
 }
 .project__card--buttons {
-    display: inherit;
-    justify-content: center;
-    align-items: center;
+  display: inherit;
+  justify-content: center;
+  align-items: center;
 }
 .project__card--buttons a {
-    display: inherit;
-    align-items: center;
-    margin: 1rem;
+  display: inherit;
+  align-items: center;
+  margin: 1rem;
 }
 
 @media screen and (max-width: 768px) {
-
-    .projects__cards {
-        grid-template-columns: auto;
-    }
-    .project__card--box {
-        width: 80%;
-    }
-
+  .projects__cards {
+    grid-template-columns: auto;
+  }
+  .project__card--box {
+    width: 80%;
+  }
 }
 
 @media screen and (max-width: 576px) {
-    
-    .card__image {
-        opacity: 0.5;
-    }
-    .card__image {
-        opacity: 1;
-    }
-    .information__hover {
-        transform: translate(0%);
-        padding: 1rem 1.2rem;
-        width: 100%;
-    }
-    .button {
-        padding: 1rem;
-        margin: 1rem;
-    }
-
+  .card__image {
+    opacity: 0.5;
+  }
+  .card__image {
+    opacity: 1;
+  }
+  .information__hover {
+    transform: translate(0%);
+    padding: 1rem 1.2rem;
+    width: 100%;
+  }
+  .button {
+    padding: 1rem;
+    margin: 1rem;
+  }
 }
 
 @media screen and (max-width: 350px) {
-
-    .project__card--buttons {
-        flex-wrap: wrap;
-    }
-    .project__link {
-        font-size: var(--normal-font-size);
-    }
-    .project__card--box {
-        width: auto;
-    }
-    .button-project {
-        width: 100%;
-        text-align: center;
-        justify-content: center;
-        margin: 0px;
-    }
-
+  .project__card--buttons {
+    flex-wrap: wrap;
+  }
+  .project__link {
+    font-size: var(--normal-font-size);
+  }
+  .project__card--box {
+    width: auto;
+  }
+  .button-project {
+    width: 100%;
+    text-align: center;
+    justify-content: center;
+    margin: 0px;
+  }
 }
-  
