--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -45,7 +45,7 @@
   bottom: 0;
   left: 0;
   width: 80%;
-  color: var(--title-color);
+  color: #bb8fce;
   font-weight: var(--font-semi-bold);
   display: flex;
   flex-direction: column;
